# Aheuiplusplus

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  asdf.txt
extlib/UTF8-CPP/include/utf8/: checked.h  core.h  utf8.h
extlib/u5e/: LICENSE
extlib/u5e/include/u5e/: basic_grapheme_iterator.hpp  canonical_decomposition.hpp
extlib/u5e/src/u5e/: version.cpp
extlib/u5e/src/u5e/props/: CompositionExclusions.txt  GraphemeBreakProperty.txt  UnicodeData.txt  canonical_combining_class.cpp  canonical_combining_class_data.hpp  canonical_combining_class_data.pl  canonical_composition_mapping.cpp  canonical_composition_mapping_data.hpp  canonical_composition_mapping_data.pl  canonical_decomposition_mapping.cpp  canonical_decomposition_mapping_data.hpp  canonical_decomposition_mapping_data.pl  compatibility_and_canonical_decomposition_mapping.cpp  compatibility_and_canonical_decomposition_mapping_data.hpp  compatibility_and_canonical_decomposition_mapping_data.pl  grapheme_cluster_break.cpp  grapheme_cluster_break_data.hpp  grapheme_cluster_break_data.sh
include/Aheuiplusplus/: Aheuiplusplus.hpp  code.hpp  command_line.hpp  cursor.hpp  debugger.hpp  element.hpp  encoding.hpp  extension.hpp  function.hpp  interpreter.hpp  memory.hpp  mode.hpp  namespace.hpp  storage.hpp  version.hpp
src/: code.cpp  command_line.cpp  cursor.cpp  debugger.cpp  element.cpp  encoding.cpp  extension.cpp  function.cpp  interpreter.a.cpp  interpreter.cpp  interpreter.e.cpp  interpreter.r.cpp  interpreter.t.cpp  main.cpp  memory.cpp  mode.cpp  namespace.cpp  storage.cpp  version.cpp  version_.cpp
