cmake_minimum_required(VERSION 3.8.0)
project(Aheuiplusplus CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(INCLUDE_DIR "./include")
set(SOURCE_DIR "./src")
set(OUTPUT_DIR "./bin")

set(COMPILE_TARGET "Executable" CACHE STRING "아희++을 어떤 형태로 컴파일 할 지 설정합니다.")

set_property(CACHE COMPILE_TARGET PROPERTY STRINGS "Executable" "Library")

include_directories(${INCLUDE_DIR})
file(GLOB SOURCE_LIST ${SOURCE_DIR}/*.cpp)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})

add_definitions(-D__STDC_CONSTANT_MACROS)
add_definitions(-D__STDC_LIMIT_MACROS)

string(TOLOWER ${COMPILE_TARGET} COMPILE_TARGET)

if(${COMPILE_TARGET} STREQUAL "executable" OR ${COMPILE_TARGET} STREQUAL "e")
	add_definitions(-DAHEUIPLUSPLUS_TARGET=1)

	add_executable(${PROJECT_NAME} ${SOURCE_LIST})
elseif(${COMPILE_TARGET} STREQUAL "library" OR ${COMPILE_TARGET} STREQUAL "l")
	add_definitions(-DAHEUIPLUSPLUS_TARGET=2)

	add_library(${PROJECT_NAME} STATIC ${SOURCE_LIST})
endif(${COMPILE_TARGET} STREQUAL "executable" OR ${COMPILE_TARGET} STREQUAL "e")


if(${COMPILE_TARGET} STREQUAL "executable" OR ${COMPILE_TARGET} STREQUAL "e")
	install(TARGETS ${PROJECT_NAME} DESTINATION bin)
elseif(${COMPILE_TARGET} STREQUAL "library" OR ${COMPILE_TARGET} STREQUAL "l")
	file(GLOB HEADER_LIST ${INCLUDE_DIR}/Aheuiplusplus/*.hpp)

	install(FILES ${HEADER_LIST} DESTINATION include/Aheuiplusplus)
	install(TARGETS ${PROJECT_NAME} DESTINATION lib)
endif(${COMPILE_TARGET} STREQUAL "executable" OR ${COMPILE_TARGET} STREQUAL "e")